makefile serveur creation

--- a/part_1/hexercice/makefile
+++ b/part_1/hexercice/makefile
@@ -1,2 +1,11 @@
 run:
+	clear
 	python3 hexercice.py client 192.168.47.162 Alice tablier 7
+
+server:
+	clear
+	python3 hexercice.py server host
+
+client:
+	clear
+	python3 hexercice.py client 127.0.0.1 client
