--- a/part_1/hexercice/makefile
+++ b/part_1/hexercice/makefile
@@ -4,11 +4,19 @@ run:
 
 server:
 	clear
-	python3 hexercice.py server host tablier 5
+	python3 hexercice.py server host tablier 6
+
+serverP:
+	clear
+	python3 hexercice.py Bob pileouface tablier 5
 
 client:
 	clear
-	python3 hexercice.py client 127.0.0.1 client tablier 5
+	python3 hexercice.py client 127.0.0.1 client tablier 6
+
+clientP:
+	clear
+	python3 hexercice.py 127.0.0.1 Alice pileouface
 
 help:
 	clear
