--- a/part_2/labdm/lab.conf
+++ b/part_2/labdm/lab.conf
@@ -5,11 +5,11 @@ LAB_EMAIL=nicolas.ollinger@univ-orleans.fr
 
 alice[0]="lana"
 nestor[0]="lana"
-#nestor[con0]=none
+nestor[con0]=none
 
 eve[0]="lana"
 eve[1]="colla"
-#eve[con0]=none
+eve[con0]=none
 ispa[1]="colla"
 ispa[0]="rezo"
 ispa[con0]=none
